--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>    
     </div>
         <footer>
+            <!-- class copyright ? -->
             Posted by Anastaciya
             <br>
             2018.11.03
