--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
                     </a>
             </div>
         </div>    
+
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="">item1</a></li>
+                    <li><a href="">item2</a></li>
+                    <li><a href="">item3</a></li>
+                    <li><a href="">item4</a></li>
+                    <li>
+                        <a href="">item5</a>
+                        <ul class="sub-menu">
+                            <li><a href="">sub-item1</a></li>
+                            <li><a href="">sub-item2</a></li>
+                            <li><a href="">sub-item3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
         <footer>
             <!-- class copyright ? -->
