--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
             </div>
         </div>    
 
+        <style>
+            .menu li ul{
+                display: none;
+            }
+
+            .menu li:hover ul{
+                display: block;
+            }
+        </style>
         <div class="menu">
             <nav>
                 <ul>
