--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="">item1</a></li>
+                    <li>
+                        <a href="">item1</a>
+                        <ul class="sub-menu">
+                            <li><a href="">sub-item2</a></li>
+                            <li><a href="">sub-item3</a></li>
+                            <li><a href="">sub-item4</a></li>
+                            <li><a href="">sub-item5</a></li>
+                        </ul>
+                    </li> 
                     <li><a href="">item2</a></li>
                     <li><a href="">item3</a></li>
                     <li><a href="">item4</a></li>
