--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">item1</a>
+                        <a href="/aboutus.html">about us</a>
                         <ul class="sub-menu">
-                            <li><a href="">sub-item2</a></li>
-                            <li><a href="">sub-item3</a></li>
-                            <li><a href="">sub-item4</a></li>
-                            <li><a href="">sub-item5</a></li>
+                            <li><a href="">contacts</a></li>
+                            <li><a href="">nuber phone</a></li>
+                            <li><a href="">adress</a></li>
+                            <li><a href="">way</a></li>
                         </ul>
                     </li> 
-                    <li><a href="">item2</a></li>
-                    <li><a href="">item3</a></li>
-                    <li><a href="">item4</a></li>
+                    <li><a href="/aboutus.html">main office</a></li>
+                    <li><a href="">director</a></li>
+                    <li><a href="">manager</a></li>
                     <li>
-                        <a href="">item5</a>
+                        <a href="">tickets</a>
                         <ul class="sub-menu">
-                            <li><a href="">sub-item1</a></li>
-                            <li><a href="">sub-item2</a></li>
-                            <li><a href="">sub-item3</a></li>
+                            <li><a href="/aboutus.html">Pushkina 10</a></li>
+                            <li><a href="">book</a></li>
+                            <li><a href="">help</a></li>
                         </ul>
                     </li>
                 </ul>
